--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include setup.py README.rst MANIFEST.in LICENSE
-recursive-include sentry_statsd *
+recursive-include sentry_zabbix *
 global-exclude *~
